<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Chess41</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="main_menu">Main Menu</string>
    <string name="new_game">Start a New Game (vs Human)</string>
    <string name="new_ai_game">Start a New Game (vs AI)</string>
    <string name="load">Watch a Recorded Game</string>
    <string name="undo">Undo Move</string>
    <string name="offerDraw">Offer Draw</string>
    <string name="ai_move">AI Move</string>
    <string name="resign">Resign</string>
    <string name="exit_game">Exit Game</string>
    <string name="dialog_save_recording">Save a recording of this game?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="game_activity_display_message">Playing a Game of Chess</string>
    <string name="open_activity_display_message">Open a Recorded Game</string>
    <string name="button_sort_name">Sort by Title</string>
    <string name="button_sort_date">Sort by Date</string>
    <string name="title_activity_replay">ReplayActivity</string>
    <string name="forward_button">Forward</string>
    <string name="back_button">Back</string>
    <string name="auto">Auto</string>
    <string name="ok">OK</string>
    <string name="save">Save</string>
    <string name="pleaseTitle">Provide a game title.</string>
    <string name="white">White</string>
    <string name="black">Black</string>

</resources>
