<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    tools:context="edu.rutgers.cs.chess41.MainActivity" >
    
    <View
	  	android:layout_width="1dp"
	  	android:layout_height="0dp"
	  	android:layout_weight="1" />
    	
    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:text="@string/main_menu" />
	    
	<View
	  	android:layout_width="1dp"
	  	android:layout_height="0dp"
	  	android:layout_weight="0.5" />
    
    <Button
        android:id="@+id/button_new_game"
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:text="@string/new_game"
    	android:onClick="launchGame" />
    
    <Button
        android:id="@+id/button_new_ai_game"
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:text="@string/new_ai_game"
    	android:onClick="launchGame" />
        
    <Button
        android:id="@+id/button_load"
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:text="@string/load"
    	android:onClick="launchOpen" />
    
	<View
	  	android:layout_width="1dp"
	  	android:layout_height="0dp"
	  	android:layout_weight="2" />
    
    </LinearLayout>