<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

   <View
	  	android:layout_width="1dp"
	  	android:layout_height="0dp"
	  	android:layout_weight="0.1" />
   
    <TextView
        android:id="@+id/whose_turn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textSize="20sp" />

    <fragment
        android:id="@+id/board_fragment"
        android:name="edu.rutgers.cs.chess41.BoardFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"       
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        tools:layout="@layout/board_fragment" />

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/button_forward"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:textSize="16sp"
            android:onClick="forward"
            android:enabled="true"
            android:text="@string/forward_button" />
        
        <Button
            android:id="@+id/button_back"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:textSize="16sp"
            android:onClick="back"
            android:enabled="false"
            android:text="@string/back_button" />

  <!--        <Button
            android:id="@+id/button_auto"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:textSize="16sp"
            android:onClick="auto"
            android:text="@string/auto" /> -->

		
   </LinearLayout>
    
    <Button
        android:id="@+id/button_exit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="showSaveDialog"
        android:text="@string/exit_game"
        android:visibility="gone" />
    
    <View
	  	android:layout_width="1dp"
	  	android:layout_height="0dp"
	  	android:layout_weight="1" />

</LinearLayout>